2009-05-04  Mark Wielaard  <mjw@redhat.com>

	* autogen.sh: Lower requirements to autoconf 2.59 and automake 1.9.6.
	* configure.ac (AM_INIT_AUTOMAKE): Require 1.9 or higher.
	(abs_top_builddir): Explicitly define.
	(abs_top_srcdir): Likewise.
	(additional-vms): Rewrite help string and description.
	* missing: Remove generated file (autogen.sh).

2009-05-05  Lillian Angel  <langel@redhat.com>

	Fixes BZ#313
	* Makefile.am
	(hotspot): Fixes paths and creates server directory before copy.

2009-05-05  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Building --with-additional-vms=zero and
	srcdir != builddir doesn't work.

2009-05-03  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES): Apply icedtea-cacao conditionally
	on BUILD_CACAO.
	(ADD_ZERO_EXTRA_BUILD_ENV): Filter out cacao patches passed in
	DISTRIBUTION_PATCHES.
	(stamps/add-zero.stamp, stamps/add-zero-debug.stamp): Remove obsolete
	unset commands.
	
2009-05-01  Matthias Klose  <doko@ubuntu.com>

	* patches/cacao/launcher.patch: Create new thread depending on the
	current VM.
	* Makefile.am (ICEDTEA_PATCHES): Apply unconditionally.
	(icedtea-against-icedtea): Add dependencies on stamps/add-cacao.stamp,
	stamps/add-zero.stamp.
	(icedtea-debug-against-icedtea): Add dependencies on
	stamps/add-cacao-debug.stamp, stamps/add-zero-debug.stamp.
	(stamps/add-{cacao,zero}{,-debug}.stamp: New.
	(clean, stamps/download.stamp, clean-download, stamps/extract.stamp
	stamps/cacao.stamp): Use BUILD_CACAO instead of WITH_CACAO.
	(stamps/icedtea.stamp, stamps/icedtea-debug.stamp): Add VM aliases
	for cacao and zero when configured as ZERO_BUILD or WITH_CACAO.
	* configure.ac: New option --with-additional-vms=, new conditionals
	ADD_CACAO_BUILD, ADD_ZERO_BUILD, ADD_SHARK_BUILD, BUILD_CACAO.

2009-05-04  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (icedtea.stamp): Strip client probes from hotspot.stp
	when client not available (ENABLE_SYSTEMTAP only).
	(icedtea-debug.stamp): Likewise.
