@@ -1,3 +1,11 @@
+2009-05-05  Deepak Bhole <dbhole@redhat.com>
+
+	* IcedTeaPlugin.cc: Add conditional compilation block.
+	* Makefile.am: Define a collapsed (comparable) version when compiling the
+	plugin.
+	* configure.ac: Determine a collapsed (comparable) version that can be
+	used by the preprocessor for conditional compilation.
+
 2009-05-04  Mark Wielaard  <mjw@redhat.com>
 
 	* autogen.sh: Lower requirements to autoconf 2.59 and automake 1.9.6.
